# pyconjp2021-game

./: .firebaserc  .gitignore  README.md  docker-compose.yml  dockerfile  firebase.json  pyproject.toml  案.txt
api/: conf.py  main.py
api/tests/: test_conf.py  test_main.py
conf/: question.yml  text.yml
